<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/mademedium"
        android:layout_marginEnd="30dp"
        android:text="@string/tituloSueño"
        android:textColor="#636363"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/descripcion"
        android:textColor="#636363"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="@font/madelight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/descripcionSueño"
        android:textSize="16sp"/>

    <LinearLayout
        android:id="@+id/min_15"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer"
            app:tint="#636363"
            android:layout_margin="8dp"
            android:contentDescription="@string/min15" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min15"
            android:textSize="18sp"
            android:fontFamily="@font/madelight"
            android:textColor="#636363"
            android:padding="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_30"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer"
            app:tint="#636363"
            android:layout_margin="8dp"
            android:contentDescription="@string/min30" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min30"
            android:fontFamily="@font/madelight"
            android:textSize="18sp"
            android:textColor="#636363"
            android:padding="8dp"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/min_60"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        tools:ignore="UseCompoundDrawables">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:src="@drawable/timer"
            app:tint="#636363"
            android:layout_margin="8dp"
            android:contentDescription="@string/min60" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/min60"
            android:fontFamily="@font/madelight"
            android:textSize="18sp"
            android:textColor="#636363"
            android:padding="8dp"/>
    </LinearLayout>
</LinearLayout>