<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_color"
    tools:context=".MainActivity">
    <LinearLayout
        android:id="@+id/imagen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1">
        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:srcCompat="@drawable/smrtvmetal"
            android:contentDescription="@string/smrtv" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/barras"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:background="@drawable/bg_boton"
        app:layout_constraintBottom_toTopOf="@+id/botonGrande"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imagen">
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lineas"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/barrasblancas"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/botonGrande"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/botonesMultimedia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/barras">
        <ImageButton
            android:id="@+id/playPause"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:gravity="center"
            android:background="@drawable/boton_2"
            android:contentDescription="@string/reproducir" />
   </LinearLayout>
   <LinearLayout
        android:id="@+id/botonesMultimedia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:background="@drawable/bg_boton"
        app:layout_constraintBottom_toTopOf="@+id/volumen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonGrande">
        <ImageButton
            android:id="@+id/timerBtn"
            android:layout_width="94dp"
            android:layout_height="52dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/botontiempo"
            android:contentDescription="@string/modo_sue_o" />
        <ImageButton
            android:id="@+id/reload"
            android:layout_width="94dp"
            android:layout_height="52dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_marginStart="25dp"
            android:background="@drawable/botonrecargar"
            android:contentDescription="@string/recargar" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/volumen"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:gravity="center"
        android:background="@drawable/bg_boton"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/botonesMultimedia">
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="10dp"
            android:backgroundTint="#feffff"
            android:contentDescription="@string/volumenDes"
            app:srcCompat="@drawable/volume_high" />
        <SeekBar
            android:id="@+id/seekBarVolumen"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:thumb="@drawable/thumb_image"
            android:thumbTint="#FFFFFF"
            android:progressTint="#FFFFFF"
            android:progressBackgroundTint="#FFFFFF"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>